--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Will Gasperini Portfolio</title>
 </head>
 <body>
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+<h1>Will Gasperini</h1>
+<p>Experience</p>
 
 </body>
 </html>
